# zuspec-be-sv

./: .buildinfo  DOCUMENTATION_COMPLETE.md  README.md  api.html  contributing.html  examples.html  features.html  generator.html  genindex.html  index.html  ivpm.yaml  objects.inv  pyproject.toml  quickstart.html  search.html  searchindex.js  testing.html
.github/workflows/: ci.yml
_sources/: api.rst.txt  examples.rst.txt  index.rst.txt  quickstart.rst.txt  testing.rst.txt
docs/: conf.py  contributing.rst  features.rst  generator.rst
src/zuspec/be/sv/: __init__.py  _version.py  cli_plugin.py  generator.py  rand_class_emitter.py
src/zuspec/be/sv/ir/: __init__.py  constraint_emit.py  core_to_sv.py  expr_emit.py  rtl.py  rtl_emit.py  rtl_expr.py  stmt.py  stmt_emit.py  sv.py  sv_emit.py
src/zuspec/be/sv/passes/: __init__.py  pipeline_to_sv.py  sv_emit.py
src/zuspec/be/sv/share/sv/: zuspec.sv  zuspec_component.svh
tests/performance/: test_backend_comparison.py  test_plateau_analysis.py  test_scaling_analysis.py  test_sim_perf.py  test_verify_work.py
tests/unit/: test_be_cli_plugin.py  test_constraint_emit.py  test_core_to_sv.py  test_expr_emit.py  test_interface_class.py  test_param_simulation.py  test_parameterization.py  test_sim.py  test_smoke.py  test_stmt_emit.py  test_sv_ir_emit.py  test_translation.py  test_xtor_smoke.py
tests/unit/data/test_xtor_smoke/: tb_xtor_interface_bundle_sim.sv  tb_xtor_interface_sim.sv  tb_xtor_smoke_sim.sv  test_xtor_core.sv  xtor_core.sv
